test/libhyperion/syntaxTests/receiveEther/return_value.hyp
contract C {
    receive() external returns (uint256) {}
}
// ----
// DeclarationError 7793: (17-56): Receive znd function must be payable, but is "nonpayable".
// DeclarationError 6899: (44-53): Receive znd function cannot return values.
